2.1.3
  * Added support for adding/subtracting timedelta instances from FrameTimestamp instances
  * Fixed an indexing problem in the coherent dedispersion padding

2.1.2
  * Improved compatibility for measurement sets generated by lsl.writer.measurementset
  * Added support for directly writing measurement sets with correlateTBF.py, correlateTBN.py, and correlateTBW.py
  * Fixed a problem copying AntennaArrays in lsl.imaging.data.VisibilityDataSet
  * Fixed a bug in the polarization handling in XEngine3

2.1.1
  * Fixed a build problem with lsl/reader/drspec.c found on some versions of OSX
  * Various cleanups based on https://lgtm.com analysis
  * Fixed a problem in the measurement set writer that caused CASA's listobs() to fail
  * Clarified which version of FFTW3 is needed.

2.1.0
  * Added UCF_USERNAME_RE to lsl.common.idf/sdf/sdfADP to make it eaiser to validate UCF usernames 
  * Added support for querying the MCS `mindelays.txt` file in lsl.common.metabundle/metabundleADP
  * Added support for the XXCRCIYY, CRCI, and I-only DR spectrometer modes
  * Several consistency fixes for the API in lsl.common.sdf/sdfADP and lsl.common.metabundle/metabundleADP

2.0.3
  * Fixed a problem with displaying lsl.reader.errors under Python3
  * Cleaned up SDF and IDF rendering to make it faster
  * Fixed a problem in lsl.imaging.utils.ImgW that lead to a shift in source position with frequency
  * Fixed a problem fitting a Gaussian to the point spread function in lsl.imaging.deconv
  
2.0.2
  * Added a -v/--lwasv option to correlateTBN.py and tbnSpectra.py
  * Added better input file type checking to the various "correlate" and "spectra" scripts
  * Switched back to CDDIS for ionospheric data
  * Fixed an error when setting beam/dipole mode for STEPPED SDFs
  * Fixed a bug in updateLSLSSMIF.py when trying to revert a SSMIF
  * Added a color keyword to the classes in lsl.common.busy and lsl.common.progress
  * Added a new BusyIndicatorPlus class to lsl.common.busy