@@ -20,7 +20,7 @@ from datetime import datetime, timedelta
 from astropy.time import Time as AstroTime
 
 from lsl.common import dp as dp_common
-from lsl.astro import unix_to_utcjd, MJD_OFFSET
+from lsl.astro import unix_to_utcjd, MJD_OFFSET, unix_to_taimjd
 
 
 __version__ = '0.2'
@@ -647,7 +647,7 @@ class FrameTimestamp(object):
     @property
     def jd(self):
         """
-        JD as a floating point value.
+        UTC JD as a floating point value.
         """
         
         return unix_to_utcjd(self)
@@ -655,7 +655,7 @@ class FrameTimestamp(object):
     @property
     def mjd(self):
         """
-        MJD as a floating point value.
+        UTC MJD as a floating point value.
         """
         
         return self.jd - MJD_OFFSET
@@ -663,13 +663,21 @@ class FrameTimestamp(object):
     @property
     def pulsar_mjd(self):
         """
-        MJD as  three-element tuple of integer number of MJD days, fractional
-        MJD day, and fractional seconds.
+        UTC MJD as  three-element tuple of integer number of MJD days,
+        fractional MJD day, and fractional seconds.
         """
         
         days = self._int // 86400
         frac = (self._int - days*86400) / 86400.0
         return (days + 40587, frac, self._frac)
+        
+    @property
+    def tai_mjd(self):
+        """
+        TAI MJD as a floating point value.
+        """
+        
+        return unix_to_taimjd(self)
         
     @property
     def dp_timetag(self):
