@@ -1,6 +1,7 @@
 2.1.3
   * Added support for adding/subtracting timedelta instances from FrameTimestamp instances
   * Fixed an indexing problem in the coherent dedispersion padding
+  * Added a `tai_mjd` field to lsl.reader.base.FrameTimestamp
 
 2.1.2
   * Improved compatibility for measurement sets generated by lsl.writer.measurementset
